--- a/task-1-matrix-product/pom.xml
+++ b/task-1-matrix-product/pom.xml
@@ -29,6 +29,11 @@
 
     <dependencies>
         <!-- libraries -->
+        <dependency>
+            <groupId>it.unimi.dsi</groupId>
+            <artifactId>dsiutils</artifactId>
+            <version>2.7.3</version>
+        </dependency>
 
         <!-- tests -->
     </dependencies>
